--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 include 'kodilla-testing'
 include 'kodilla-stream'
+include ' kodilla-exception'
+include 'kodilla-exception'
+include 'kodilla-exception'
 
